force-app/main/default/objects/Lead/fields/Fundraiser_SF_Maps__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_SF_Maps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For testing SF Maps</description>
    <label>Fundraiser SF Maps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>