force-app/main/default/objects/Lead/fields/iWave_PROscores__Address_1__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Address_1__c</fullName>
    <formula>IF( CONTAINS( Street, SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;) ),
LEFT( Street,
FIND( SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;),
Street)
/* If you use MID, add -2 to remove the 2 ghost characters that you need to trim off */
),
Street
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 1</label>
    <type>Text</type>
</CustomField>