force-app/main/default/objects/Lead/fields/iWave_PROscores__Address_2__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__Address_2__c</fullName>
    <formula>IF(CONTAINS( Street, SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;) ),
RIGHT(Street,
LEN(Street) -
FIND( SUBSTITUTE($Label.iwave_proscores__newline,&quot;-&quot;, &quot;&quot;) ,
Street)
),&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 2</label>
    <type>Text</type>
</CustomField>