force-app/main/default/objects/Lead/fields/iWave_PROscores__isProfile__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__isProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has this been promoted to a profile</description>
    <label>iWave Profile</label>
    <type>Checkbox</type>
</CustomField>