force-app/main/default/objects/Lead/fields/iWave_PROscores__isVerified__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__isVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is verified</description>
    <label>iWave Verified</label>
    <type>Checkbox</type>
</CustomField>