force-app/main/default/objects/Lead/fields/iWave_PROscores__iWave_Donation_Count__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Donation_Count__c</fullName>
    <label>iWave Donations Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>