force-app/main/default/objects/Lead/fields/iWave_PROscores__iWave_Donations__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Donations__c</fullName>
    <label>iWave Donations (Deprecated)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>