force-app/main/default/objects/Lead/fields/iWave_PROscores__iWave_Est_Capacity__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Est_Capacity__c</fullName>
    <label>iWave Est. Capacity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>