force-app/main/default/objects/Lead/fields/iWave_PROscores__iWave_PROscore__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_PROscore__c</fullName>
    <label>iWave Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>