force-app/main/default/objects/Lead/fields/iWave_PROscores__iWave_Total_Donations__c.field-meta.xml
<CustomField>
    <fullName>iWave_PROscores__iWave_Total_Donations__c</fullName>
    <label>iWave Total Donations (Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>